feat(config): add jwt and bearer token env variable validation

--- a/.env.template
+++ b/.env.template
@@ -50,27 +50,6 @@ LOG_ROTATION_MAX_LOGS=
 # a number e.g. 1g, 100m, 20k.
 LOG_ROTATION_MAX_SIZE=
 
-### KEYCLOAK ##############################################
-
-# Refer to documentation for details on options:
-# https://github.com/keycloak/keycloak-documentation/blob/master/securing_apps/topics/token-exchange/token-exchange.adoc
-
-# Request Token
-KC_ENABLED=false
-KC_REQUESTTOKEN_URL=
-KC_REQUESTTOKEN_AUDIENCE=
-KC_REQUESTTOKEN_CLIENT_ID=
-KC_REQUESTTOKEN_CLIENT_SECRET=
-KC_REQUESTTOKEN_GRANT_TYPE='urn:ietf:params:oauth:grant-type:token-exchange'
-KC_REQUESTTOKEN_REQUESTED_TOKEN_TYPE='urn:ietf:params:oauth:token-type:access_token'
-# Service Authorisation
-KC_SERVICEAUTH_URL=
-KC_SERVICEAUTH_CLIENT_ID=
-KC_SERVICEAUTH_CLIENT_SECRET=
-KC_SERVICEAUTH_GRANT_TYPE='password'
-KC_SERVICEAUTH_PASSWORD=
-KC_SERVICEAUTH_USERNAME=
-
 ### API KEYS ##############################################
 
 AUTH_BEARER_TOKEN_ARRAY=[{"service": "test", "value": "testtoken"}]
@@ -80,7 +59,7 @@ AUTH_BEARER_TOKEN_ARRAY=[{"service": "test", "value": "testtoken"}]
 # JWT_ALLOWED_ISSUERS and JWT_ALLOWED_AUDIENCE can be array of strings or single string
 # JWT_ALLOWED_ALGO_ARRAY can only be array of strings
 # See https://github.com/auth0/node-jsonwebtoken#jwtverifytoken-secretorpublickey-options-callback for more info
-OPENID_JWKS_ENDPOINT='https://not-real-issuer.ydh.nhs.uk/auth/realms/SIDER/protocol/openid-connect/certs'
+JWKS_ENDPOINT='https://not-real-issuer.ydh.nhs.uk/auth/realms/SIDER/protocol/openid-connect/certs'
 JWT_ALLOWED_AUDIENCE='who-knows'
 JWT_ALLOWED_ALGO_ARRAY=["RS256"]
 JWT_ALLOWED_ISSUERS='https://not-real-issuer.ydh.nhs.uk/auth/realms/SIDER' 
