--- a/package.json
+++ b/package.json
@@ -83,17 +83,19 @@
 		"dotenv": "^8.2.0",
 		"env-schema": "^2.0.1",
 		"fastify": "^3.10.1",
+		"fastify-auth": "^1.0.1",
 		"fastify-autoload": "^3.4.0",
 		"fastify-bearer-auth": "^5.0.2",
 		"fastify-cors": "^5.1.0",
 		"fastify-disablecache": "^1.0.3",
 		"fastify-helmet": "^5.1.0",
 		"fastify-plugin": "^3.0.0",
-		"fastify-swagger": "^3.5.0",
 		"file-stream-rotator": "^0.5.7",
 		"fluent-json-schema": "^2.0.3",
 		"helmet": "^4.4.1",
 		"http-errors": "^1.8.0",
+		"jsonwebtoken": "^8.5.1",
+		"jwks-rsa": "^1.12.2",
 		"pino": "^6.11.0"
 	}
 }
