--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,7 @@ jobs:
               with:
                   github-token: ${{ secrets.GITHUB_TOKEN }}
                   parallel: true
+                  flag-name: run-${{ matrix.node-version }}-${{ matrix.os }}
 
     lint-docker-file:
         name: Lint Dockerfile
