--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
 		"start:dev": "nodemon | pino-pretty --colorize",
 		"test": "npm run lint && npm run jest"
 	},
+	"husky": {
+		"hooks": {
+			"pre-push": "npm run lint:prettier:ci && npm run test"
+		}
+	},
 	"jest": {
 		"clearMocks": true,
 		"collectCoverageFrom": [
@@ -71,6 +76,7 @@
 		"eslint-plugin-security": "^1.4.0",
 		"faker": "^5.1.0",
 		"fastify-formbody": "^5.0.0",
+		"husky": "^4.3.8",
 		"jest": "^26.6.3",
 		"license-checker": "^25.0.1",
 		"lodash": "^4.17.20",
