--- a/package.json
+++ b/package.json
@@ -85,7 +85,6 @@
 		"prettier": "2.2.1"
 	},
 	"dependencies": {
-		"axios": "^0.21.1",
 		"dotenv": "^8.2.0",
 		"env-schema": "^2.0.1",
 		"fastify": "^3.10.1",
@@ -96,6 +95,7 @@
 		"fastify-disablecache": "^1.0.3",
 		"fastify-helmet": "^5.1.0",
 		"fastify-plugin": "^3.0.0",
+		"fastify-reply-from": "^4.0.0",
 		"file-stream-rotator": "^0.5.7",
 		"fluent-json-schema": "^2.0.3",
 		"helmet": "^4.4.1",
