--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
             - name: Run Prettier
               run: npm run lint:prettier:ci
             - name: Run License Checker
-              run: npm run license-checker
+              run: npm run lint:licenses
             - name: Run Lockfile Linter
               run: npx lockfile-lint --path package-lock.json --type npm --allowed-hosts npm --validate-https
 
