--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
             - name: Run Tests
               run: |
                   cp .env.template .env
-                  npm run jest-coverage
+                  npm run jest:coverage
             - name: Coveralls Parallel
               uses: coverallsapp/github-action@v1.1.2
               with:
