--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
 	},
 	"scripts": {
 		"benchmark": "autocannon \"http://0.0.0.0:8204/\"",
-		"changelog": "conventional-changelog -p @commitlint/config-conventional -s -i CHANGELOG.md && prettier CHANGELOG.md --write",
 		"jest": "jest --detectOpenHandles --runInBand",
 		"jest:coverage": "jest --coverage --runInBand",
 		"lint": "eslint . --cache --ext js,jsx,ts,tsx --ignore-path .gitignore",
 		"lint:licenses": "license-checker --direct --onlyAllow=\"0BSD;Apache-2.0;BSD-2-Clause;BSD-3-Clause;ISC;MIT;Unlicense\" --production --summary",
-		"lint:prettier": "prettier . --write --ignore-path .gitignore",
-		"lint:prettier:ci": "prettier . --check --ignore-path .gitignore",
+		"lint:prettier": "prettier \"**/!(CHANGELOG.md|package.json)\" --write --ignore-path .gitignore --ignore-unknown",
+		"lint:prettier:ci": "prettier \"**/!(CHANGELOG.md|package.json)\"  --check --ignore-path .gitignore --ignore-unknown",
 		"start": "node .",
 		"start:dev": "nodemon | pino-pretty --colorize",
 		"test": "npm run lint && npm run jest"
@@ -72,7 +71,6 @@
 		"@commitlint/cli": "^11.0.0",
 		"@commitlint/config-conventional": "^11.0.0",
 		"autocannon": "^7.0.1",
-		"conventional-changelog-cli": "^2.1.1",
 		"coveralls": "^3.1.0",
 		"eslint": "^7.20.0",
 		"eslint-config-airbnb-base": "^14.2.1",
