--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.2",
-    "pino": "^6.11.2"
+    "pino": "^6.11.2",
+    "under-pressure": "^5.6.0"
   }
 }
