--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "jest": "jest --detectOpenHandles --runInBand",
     "jest:coverage": "jest --coverage --runInBand",
     "lint": "eslint . --cache --ext js,jsx,ts,tsx --ignore-path .gitignore",
-    "lint:licenses": "license-checker --direct --onlyAllow=\"0BSD;Apache-2.0;BSD-2-Clause;BSD-3-Clause;ISC;MIT;Unlicense\" --production --summary",
+    "lint:licenses": "license-checker --direct --onlyAllow=\"0BSD;Apache-2.0;Apache 2.0;BSD-2-Clause;BSD-3-Clause;ISC;MIT;Unlicense\" --production --summary",
     "lint:prettier": "prettier . --write --ignore-unknown",
     "lint:prettier:ci": "prettier . --check --ignore-unknown",
     "prepare": "husky install && rm -rf .git/hooks && ln -s ../.husky .git/hooks",
@@ -77,7 +77,6 @@
     "license-checker": "^25.0.1",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.12",
-    "pino-pretty": "^5.1.1",
     "prettier": "2.3.2"
   },
   "dependencies": {
@@ -101,6 +100,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.3",
     "pino": "^6.12.0",
+    "pino-pretty": "^5.1.1",
     "under-pressure": "^5.7.0"
   }
 }
