--- a/.env.template
+++ b/.env.template
@@ -6,7 +6,7 @@ NODE_ENV=development
 # NOTE: Needs to be kept at "0.0.0.0" if using Docker
 SERVICE_HOST=0.0.0.0
 SERVICE_PORT=8204
-# URL and port of what the Mirth Connect FHIR/HTTP Listener channel is listening on
+# URL and port the Mirth Connect FHIR/HTTP Listener channel is listening on
 SERVICE_REDIRECT_URL=
 
 ### HTTPS #################################################
