--- a/package.json
+++ b/package.json
@@ -80,8 +80,10 @@
     "prettier": "2.3.2"
   },
   "dependencies": {
+    "ajv": "^8.6.2",
+    "ajv-formats": "^2.1.0",
     "dotenv": "^10.0.0",
-    "env-schema": "^2.1.0",
+    "env-schema": "^3.1.0",
     "fastify": "^3.19.1",
     "fastify-accepts": "^2.0.1",
     "fastify-auth": "^1.1.0",
