--- a/package.json
+++ b/package.json
@@ -95,9 +95,9 @@
     "fastify-plugin": "^3.0.0",
     "fastify-rate-limit": "^5.6.0",
     "fastify-reply-from": "^6.0.1",
+    "fastify-sensible": "^3.1.1",
     "file-stream-rotator": "^0.5.7",
     "fluent-json-schema": "^3.0.1",
-    "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.4",
     "pino": "^6.13.0",
