--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,7 @@
+###########################################################
+### STANDARD ENV VARIABLES ################################
+###########################################################
+
 # Set to "production" for live system
 NODE_ENV=development
 
@@ -8,34 +12,6 @@ SERVICE_HOST=0.0.0.0
 SERVICE_PORT=8204
 # URL and port the Mirth Connect FHIR/HTTP Listener channel is listening on
 SERVICE_REDIRECT_URL=
-
-### HTTPS #################################################
-
-# Will use PFX file/passphrase over SSL cert/key if both specified
-HTTPS_PFX_PASSPHRASE=
-# example: "./server.pfx"
-HTTPS_PFX_FILE_PATH=
-HTTPS_SSL_CERT_PATH=
-HTTPS_SSL_KEY_PATH=
-
-### DOCKER ################################################
-
-# Refer to https://docs.docker.com/compose/compose-file/compose-file-v3/#restart
-# for options.
-# Defaults to 'unless-stopped'
-DOCKER_RESTART_POLICY=
-
-# The max amount of memory the Docker container can use.
-# As an example, '50M'
-# Defaults to 0 (use all available memory)
-DOCKER_APP_MEMORY=
-
-# The max amount of processing time the Docker container
-# can use of CPU.
-# As an example, setting to 0.98 represents 98% of CPU
-# processing time of a single core
-# Defaults to 0 (use all available processing time)
-DOCKER_APP_CPUS=
 
 ### CORS ##################################################
 
@@ -60,36 +36,33 @@ CORS_ALLOW_CREDENTIALS=
 # Expects comma-delimited string i.e. "Content-Range, X-Content-Range"
 CORS_EXPOSED_HEADERS=
 
-### PROCESS LOAD HANDLING #################################
+### DOCKER ################################################
 
-# If one of the below thresholds is reached then the server
-# will return a 503 response until the load has been relieved
+# The max amount of processing time the Docker container
+# can use of CPU.
+# As an example, setting to 0.98 represents 98% of CPU
+# processing time of a single core
+# Defaults to 0 (use all available processing time)
+DOCKER_APP_CPUS=
 
-# The max event loop delay in milliseconds
-# Defaults to 0 (disabled)
-PROC_LOAD_MAX_EVENT_LOOP_DELAY=
+# The max amount of memory the Docker container can use.
+# As an example, "50M"
+# Defaults to 0 (use all available memory)
+DOCKER_APP_MEMORY=
 
-# The max heap size in bytes
-# Defaults to 0 (disabled)
-PROC_LOAD_MAX_HEAP_USED_BYTES=
+# Refer to https://docs.docker.com/compose/compose-file/compose-file-v3/#restart
+# for options.
+# Defaults to "unless-stopped"
+DOCKER_RESTART_POLICY=
 
-# The max Resident Set Size (RSS) in bytes
-# Defaults to 0 (disabled)
-PROC_LOAD_MAX_RSS_BYTES=
+### HTTPS #################################################
 
-# The max Event Loop Utilization (ELU)
-# As an example, setting to 0.98 represents 98%
-# Defaults to 0 (disabled)
-PROC_LOAD_MAX_EVENT_LOOP_UTILIZATION=
-
-### RATE LIMITING #########################################
-
-# List of IPs that are excluded from rate limiting
-RATE_LIMIT_EXCLUDED_ARRAY=
-
-# Maximum number of connections per minute per client
-# Defaults to 1000
-RATE_LIMIT_MAX_CONNECTIONS_PER_MIN=2500
+# Will use PFX file/passphrase over SSL cert/key if both specified
+HTTPS_PFX_PASSPHRASE=
+# example: "./server.pfx"
+HTTPS_PFX_FILE_PATH=
+HTTPS_SSL_CERT_PATH=
+HTTPS_SSL_KEY_PATH=
 
 ### LOGGER ################################################
 
@@ -103,7 +76,7 @@ LOG_LEVEL="info"
 LOG_ROTATION_DATE_FORMAT=
 
 # Filename including full path used by the stream, example:
-# "./logs/obs-service-%DATE%.log"
+# "./logs/ydh-fhir-authentication-service-%DATE%.log"
 # Defaults to STDOUT.
 # Ignored if deployed with Docker Compose, as Docker's
 # daemon handles logging and rotations
@@ -117,15 +90,50 @@ LOG_ROTATION_FILENAME=
 LOG_ROTATION_FREQUENCY=
 
 # Max number of logs to keep. If not set, it will not remove past logs.
-# Defaults to '10' if deployed with Docker Compose
+# Defaults to "10" if deployed with Docker Compose
 LOG_ROTATION_MAX_LOGS=
 
 # Max size of the file after which it will rotate. It can 
 # be combined with frequency or date format. The size units 
 # are "k", "m" and "g". Units need to directly follow
 # a number e.g. 1g, 100m, 20k.
-# Defaults to '100m' if deployed with Docker Compose
+# Defaults to "100m" if deployed with Docker Compose
 LOG_ROTATION_MAX_SIZE=
+
+### PROCESS LOAD HANDLING #################################
+
+# If one of the below thresholds is reached then the server
+# will return a 503 response until the load has been relieved
+
+# The max event loop delay in milliseconds
+# Defaults to 0 (disabled)
+PROC_LOAD_MAX_EVENT_LOOP_DELAY=
+
+# The max Event Loop Utilization (ELU)
+# As an example, setting to 0.98 represents 98%
+# Defaults to 0 (disabled)
+PROC_LOAD_MAX_EVENT_LOOP_UTILIZATION=
+
+# The max heap size in bytes
+# Defaults to 0 (disabled)
+PROC_LOAD_MAX_HEAP_USED_BYTES=
+
+# The max Resident Set Size (RSS) in bytes
+# Defaults to 0 (disabled)
+PROC_LOAD_MAX_RSS_BYTES=
+
+### RATE LIMITING #########################################
+
+# List of IPs that are excluded from rate limiting
+RATE_LIMIT_EXCLUDED_ARRAY=
+
+# Maximum number of connections per minute per client
+# Defaults to 1000
+RATE_LIMIT_MAX_CONNECTIONS_PER_MIN=2500
+
+###########################################################
+### PROJECT SPECIFIC ENV VARIABLES ########################
+###########################################################
 
 ### API KEYS ##############################################
 
