--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,8 @@ NODE_ENV=development
 
 ### SERVICE ###############################################
 
+# All REQUIRED variables
+
 # NOTE: Needs to be kept at "0.0.0.0" if using Docker
 SERVICE_HOST=0.0.0.0
 SERVICE_PORT=8204
