--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,6 +117,7 @@ jobs:
             - uses: hadolint/hadolint-action@v1.5.0
               with:
                   dockerfile: Dockerfile
+                  ignore: DL3018
 
     # docker-tests:
     #     name: Docker Build Tests
