--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "jwks-rsa": "^2.0.4",
     "pino": "^6.13.3",
     "pino-pretty": "^7.0.1",
+    "secure-json-parse": "^2.4.0",
     "under-pressure": "^5.8.0"
   }
 }
