--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
       "!src/app.js",
       "!src/plugins/jwt-jwks-auth/*.js"
     ],
+    "coverageReporters": [
+      "text",
+      "lcovonly"
+    ],
     "resetMocks": true,
     "testEnvironment": "node",
     "testTimeout": 10000
