--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "ajv-formats": "^2.1.1",
     "dotenv": "^10.0.0",
     "env-schema": "^3.5.0",
+    "fast-jwt": "^1.4.0",
     "fastify": "^3.24.1",
     "fastify-accepts": "^2.1.0",
     "fastify-auth": "^1.1.0",
@@ -102,7 +103,6 @@
     "fastify-sensible": "^3.1.2",
     "file-stream-rotator": "^0.5.7",
     "fluent-json-schema": "^3.0.1",
-    "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.5",
     "pino": "^7.5.1",
     "pino-pretty": "^7.2.0",
