feat(server): allow for jwks jwt and bearer token auth to be disabled

--- a/.env.template
+++ b/.env.template
@@ -153,15 +153,31 @@ RATE_LIMIT_MAX_CONNECTIONS_PER_MIN=
 
 ### API KEYS ##############################################
 
-AUTH_BEARER_TOKEN_ARRAY=[{"service": "test", "value": "testtoken"}]
+# Example: [{"service": "test", "value": "testtoken"}]
+# "value" is the only mandatory value in each object in array.
+# Leaving empty will disable bearer token auth
+AUTH_BEARER_TOKEN_ARRAY=
 
-### JWT VALIDATION ########################################
+### JWKS JWT VALIDATION ###################################
 
-# JWT_ALLOWED_ISSUERS and JWT_ALLOWED_AUDIENCE can be array of strings or single string
-# JWT_ALLOWED_ALGO_ARRAY can only be array of strings
-# See https://github.com/auth0/node-jsonwebtoken#jwtverifytoken-secretorpublickey-options-callback for more info
-JWKS_ENDPOINT="https://not-real-issuer.ydh.nhs.uk/auth/realms/SIDER/protocol/openid-connect/certs"
-JWT_ALLOWED_AUDIENCE="who-knows"
-JWT_ALLOWED_ALGO_ARRAY=["RS256"]
-JWT_ALLOWED_ISSUERS="https://not-real-issuer.ydh.nhs.uk/auth/realms/SIDER" 
-JWT_MAX_AGE="15m"
+JWKS_ENDPOINT=
+
+# A string or array of strings containing allowed values for the audience claim.
+# Requires JWKS_ENDPOINT to be set.
+# Defaults to allowing all values
+JWT_ALLOWED_AUDIENCE=
+
+# Array of allowed algorithms.
+# Requires JWKS_ENDPOINT to be set.
+# Defaults to allowing all algorithms
+JWT_ALLOWED_ALGO_ARRAY=
+
+# A string or array of strings containing allowed values for the issuer claim.
+# Requires JWKS_ENDPOINT to be set.
+# Defaults to allowing all values
+JWT_ALLOWED_ISSUERS=
+
+# A string containing the maximum allowed age (in milliseconds) for tokens to still be valid.
+# Requires JWKS_ENDPOINT to be set.
+# Defaults to not checking
+JWT_MAX_AGE="900000"
