--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "jest": "^27.4.3",
     "license-checker": "^25.0.1",
     "lodash": "^4.17.21",
+    "mock-jwks": "^1.0.1",
     "nodemon": "^2.0.15",
     "prettier": "2.5.0"
   },
