--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "license-checker": "^25.0.1",
     "lodash": "^4.17.21",
     "mock-jwks": "^1.0.1",
+    "nock": "^13.2.1",
     "nodemon": "^2.0.15",
     "prettier": "2.5.0"
   },
