chore(.env.template): correct example values

--- a/.env.template
+++ b/.env.template
@@ -177,7 +177,7 @@ JWT_ALLOWED_ALGO_ARRAY=
 # Defaults to allowing all values
 JWT_ALLOWED_ISSUERS=
 
-# A string containing the maximum allowed age (in milliseconds) for tokens to still be valid.
+# A number containing the maximum allowed age (in milliseconds) for tokens to still be valid.
 # Requires JWKS_ENDPOINT to be set.
-# Defaults to not checking
-JWT_MAX_AGE="900000"
+# Expects integer or to be unset
+JWT_MAX_AGE=900000
