chore(.env.template): clarify jwt env variable comments

--- a/.env.template
+++ b/.env.template
@@ -167,7 +167,7 @@ JWKS_ENDPOINT=
 # Defaults to allowing all values
 JWT_ALLOWED_AUDIENCE=
 
-# Array of allowed algorithms.
+# Array of strings of allowed algorithms.
 # Requires JWKS_ENDPOINT to be set.
 # Defaults to allowing all algorithms
 JWT_ALLOWED_ALGO_ARRAY=
@@ -177,7 +177,7 @@ JWT_ALLOWED_ALGO_ARRAY=
 # Defaults to allowing all values
 JWT_ALLOWED_ISSUERS=
 
-# A number containing the maximum allowed age (in milliseconds) for tokens to still be valid.
+# The maximum allowed age (in milliseconds) for tokens to still be valid.
 # Requires JWKS_ENDPOINT to be set.
 # Expects integer or to be unset
 JWT_MAX_AGE=900000
