feat(plugins/jwt-jwks-auth): support subject claim validation in jwts

--- a/.env.template
+++ b/.env.template
@@ -167,6 +167,7 @@ AUTH_BEARER_TOKEN_ARRAY=
 # allowedAudiences: String or array of strings containing allowed values for the audience claim - Defaults to allow all audiences if unset or empty
 # allowedAlgorithms: Array of strings of allowed algorithms - Defaults to allow all algorithms if unset or empty
 # allowedIssuers: String or array of strings containing allowed values for the issuer claim - Defaults to allow all issuers if unset or empty
+# allowedSubjects: String or array of strings containing allowed values for the subject claim - Defaults to allow all subjects if unset or empty
 # maxAge: Number specifying the maximum allowed age (in milliseconds) for tokens to still be valid - Defaults to no max age if unset or empty
 #
 # Leaving empty will disable JWT auth
