--- a/package.json
+++ b/package.json
@@ -1,114 +1,114 @@
 {
-  "name": "ydh-fhir-authentication-service",
-  "version": "8.0.0",
-  "description": "Yeovil District Hospital NHSFT's FHIR API Authentication Service",
-  "main": "src/app.js",
-  "repository": "git+https://github.com/Fdawgs/ydh-fhir-authentication-service.git",
-  "homepage": "https://github.com/Fdawgs/ydh-fhir-authentication-service",
-  "bugs": {
-    "url": "https://github.com/Fdawgs/ydh-fhir-authentication-service/issues"
-  },
-  "license": "MIT",
-  "author": "Frazer Smith <frazer.smith@ydh.nhs.uk>",
-  "engines": {
-    "node": ">=16.0.0"
-  },
-  "scripts": {
-    "benchmark": "autocannon -a 1000 \"http://0.0.0.0:8204/admin/healthcheck\"",
-    "jest": "jest --detectOpenHandles --runInBand",
-    "jest:coverage": "jest --coverage --runInBand",
-    "lint": "eslint . --cache --ext js,jsx,ts,tsx --ignore-path .gitignore",
-    "lint:licenses": "license-checker --direct --onlyAllow=\"0BSD;Apache-2.0;BSD-2-Clause;BSD-3-Clause;ISC;MIT;Unlicense\" --production --summary",
-    "lint:prettier": "prettier . --write --ignore-unknown",
-    "lint:prettier:ci": "prettier . --check --ignore-unknown",
-    "prepare": "husky install && rm -rf .git/hooks && ln -s ../.husky .git/hooks",
-    "start": "node .",
-    "start:dev": "nodemon",
-    "test": "npm run lint && npm run jest"
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "jest": {
-    "clearMocks": true,
-    "collectCoverageFrom": [
-      "src/**/*.js",
-      "!src/app.js",
-      "!src/plugins/jwt-jwks-auth/*.js"
-    ],
-    "coverageReporters": [
-      "text",
-      "lcovonly"
-    ],
-    "resetMocks": true,
-    "testEnvironment": "node",
-    "testTimeout": 10000
-  },
-  "nodemonConfig": {
-    "env": {
-      "NODE_ENV": "development",
-      "SUPPRESS_SUPPORT": 1
-    },
-    "ignore": [
-      "test_resources"
-    ],
-    "verbose": true,
-    "watch": [
-      ".env",
-      "src"
-    ]
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
-    "autocannon": "^7.7.0",
-    "coveralls": "^3.1.1",
-    "eslint": "^8.10.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.1",
-    "eslint-plugin-jsdoc": "^37.9.5",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-security-node": "^1.1.1",
-    "faker": "5.5.3",
-    "glob": "^7.2.0",
-    "husky": "^7.0.4",
-    "jest": "^27.5.1",
-    "license-checker": "^25.0.1",
-    "mock-jwks": "^1.0.3",
-    "nock": "^13.2.4",
-    "nodemon": "^2.0.15",
-    "prettier": "2.5.1"
-  },
-  "dependencies": {
-    "ajv-formats": "^2.1.1",
-    "dotenv": "^16.0.0",
-    "env-schema": "^3.5.2",
-    "fast-jwt": "^1.5.1",
-    "fastify": "^3.27.2",
-    "fastify-accepts": "^2.1.0",
-    "fastify-auth": "^1.1.0",
-    "fastify-autoload": "^3.11.0",
-    "fastify-bearer-auth": "^6.2.0",
-    "fastify-cors": "^6.0.3",
-    "fastify-disablecache": "^2.0.6",
-    "fastify-floc-off": "^1.0.5",
-    "fastify-helmet": "^7.0.1",
-    "fastify-plugin": "^3.0.1",
-    "fastify-rate-limit": "^5.7.2",
-    "fastify-reply-from": "^6.5.0",
-    "fastify-sensible": "^3.1.2",
-    "file-stream-rotator": "^0.6.1",
-    "fluent-json-schema": "^3.0.1",
-    "jwks-rsa": "^2.0.5",
-    "pino": "^7.8.0",
-    "pino-pretty": "^7.5.1",
-    "secure-json-parse": "^2.4.0",
-    "under-pressure": "^5.8.0",
-    "upath": "^2.0.1"
-  }
+	"name": "ydh-fhir-authentication-service",
+	"version": "8.0.0",
+	"description": "Yeovil District Hospital NHSFT's FHIR API Authentication Service",
+	"main": "src/app.js",
+	"repository": "git+https://github.com/Fdawgs/ydh-fhir-authentication-service.git",
+	"homepage": "https://github.com/Fdawgs/ydh-fhir-authentication-service",
+	"bugs": {
+		"url": "https://github.com/Fdawgs/ydh-fhir-authentication-service/issues"
+	},
+	"license": "MIT",
+	"author": "Frazer Smith <frazer.smith@ydh.nhs.uk>",
+	"engines": {
+		"node": ">=16.0.0"
+	},
+	"scripts": {
+		"benchmark": "autocannon -a 1000 \"http://0.0.0.0:8204/admin/healthcheck\"",
+		"jest": "jest --detectOpenHandles --runInBand",
+		"jest:coverage": "jest --coverage --runInBand",
+		"lint": "eslint . --cache --ext js,jsx,ts,tsx --ignore-path .gitignore",
+		"lint:licenses": "license-checker --direct --onlyAllow=\"0BSD;Apache-2.0;BSD-2-Clause;BSD-3-Clause;ISC;MIT;Unlicense\" --production --summary",
+		"lint:prettier": "prettier . --write --ignore-unknown",
+		"lint:prettier:ci": "prettier . --check --ignore-unknown",
+		"prepare": "husky install",
+		"start": "node .",
+		"start:dev": "nodemon",
+		"test": "npm run lint && npm run jest"
+	},
+	"commitlint": {
+		"extends": [
+			"@commitlint/config-conventional"
+		]
+	},
+	"jest": {
+		"clearMocks": true,
+		"collectCoverageFrom": [
+			"src/**/*.js",
+			"!src/app.js",
+			"!src/plugins/jwt-jwks-auth/*.js"
+		],
+		"coverageReporters": [
+			"text",
+			"lcovonly"
+		],
+		"resetMocks": true,
+		"testEnvironment": "node",
+		"testTimeout": 10000
+	},
+	"nodemonConfig": {
+		"env": {
+			"NODE_ENV": "development",
+			"SUPPRESS_SUPPORT": 1
+		},
+		"ignore": [
+			"test_resources"
+		],
+		"verbose": true,
+		"watch": [
+			".env",
+			"src"
+		]
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^16.2.1",
+		"@commitlint/config-conventional": "^16.2.1",
+		"autocannon": "^7.7.0",
+		"coveralls": "^3.1.1",
+		"eslint": "^8.10.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "^8.4.0",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-jest": "^26.1.1",
+		"eslint-plugin-jsdoc": "^37.9.5",
+		"eslint-plugin-promise": "^6.0.0",
+		"eslint-plugin-security": "^1.4.0",
+		"eslint-plugin-security-node": "^1.1.1",
+		"faker": "5.5.3",
+		"glob": "^7.2.0",
+		"husky": "^7.0.4",
+		"jest": "^27.5.1",
+		"license-checker": "^25.0.1",
+		"mock-jwks": "^1.0.3",
+		"nock": "^13.2.4",
+		"nodemon": "^2.0.15",
+		"prettier": "2.5.1"
+	},
+	"dependencies": {
+		"ajv-formats": "^2.1.1",
+		"dotenv": "^16.0.0",
+		"env-schema": "^3.5.2",
+		"fast-jwt": "^1.5.1",
+		"fastify": "^3.27.2",
+		"fastify-accepts": "^2.1.0",
+		"fastify-auth": "^1.1.0",
+		"fastify-autoload": "^3.11.0",
+		"fastify-bearer-auth": "^6.2.0",
+		"fastify-cors": "^6.0.3",
+		"fastify-disablecache": "^2.0.6",
+		"fastify-floc-off": "^1.0.5",
+		"fastify-helmet": "^7.0.1",
+		"fastify-plugin": "^3.0.1",
+		"fastify-rate-limit": "^5.7.2",
+		"fastify-reply-from": "^6.5.0",
+		"fastify-sensible": "^3.1.2",
+		"file-stream-rotator": "^0.6.1",
+		"fluent-json-schema": "^3.0.1",
+		"jwks-rsa": "^2.0.5",
+		"pino": "^7.8.0",
+		"pino-pretty": "^7.5.1",
+		"secure-json-parse": "^2.4.0",
+		"under-pressure": "^5.8.0",
+		"upath": "^2.0.1"
+	}
 }
