--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
 	},
 	"scripts": {
 		"benchmark": "autocannon -a 1000 \"http://0.0.0.0:8204/admin/healthcheck\"",
-		"jest": "jest --detectOpenHandles --runInBand",
-		"jest:coverage": "jest --coverage --runInBand",
+		"jest": "jest",
+		"jest:coverage": "jest --coverage",
 		"lint": "eslint . --cache --ext js,jsx,ts,tsx --ignore-path .gitignore",
 		"lint:licenses": "license-checker --direct --onlyAllow=\"0BSD;Apache-2.0;BSD-2-Clause;BSD-3-Clause;ISC;MIT;Unlicense\" --production --summary",
-		"lint:prettier": "prettier . --write --ignore-unknown",
-		"lint:prettier:ci": "prettier . --check --ignore-unknown",
+		"lint:prettier": "prettier . -w -u",
+		"lint:prettier:ci": "prettier . -c -u",
 		"prepare": "husky install",
 		"start": "node .",
 		"start:dev": "nodemon",
