--- a/package.json
+++ b/package.json
@@ -85,23 +85,23 @@
 		"prettier": "2.6.2"
 	},
 	"dependencies": {
+		"@fastify/accepts": "^3.0.0",
+		"@fastify/auth": "^2.0.0",
+		"@fastify/autoload": "^4.0.1",
+		"@fastify/bearer-auth": "^7.0.1",
+		"@fastify/cors": "^7.0.0",
+		"@fastify/helmet": "^8.0.1",
+		"@fastify/rate-limit": "^6.0.0",
+		"@fastify/reply-from": "^7.0.1",
+		"@fastify/sensible": "^4.1.0",
 		"ajv-formats": "^2.1.1",
 		"dotenv": "^16.0.0",
 		"env-schema": "^4.0.0",
 		"fast-jwt": "^1.5.3",
 		"fastify": "^3.28.0",
-		"fastify-accepts": "^2.1.0",
-		"fastify-auth": "^1.1.0",
-		"fastify-autoload": "^3.11.0",
-		"fastify-bearer-auth": "^6.3.0",
-		"fastify-cors": "^6.1.0",
 		"fastify-disablecache": "^2.0.7",
 		"fastify-floc-off": "^1.0.6",
-		"fastify-helmet": "^7.0.1",
 		"fastify-plugin": "^3.0.1",
-		"fastify-rate-limit": "^5.8.0",
-		"fastify-reply-from": "^6.7.0",
-		"fastify-sensible": "^3.1.2",
 		"file-stream-rotator": "^0.6.1",
 		"fluent-json-schema": "^3.1.0",
 		"jwks-rsa": "^2.0.5",
