refactor(plugins/jwt-jwks-auth)!: obtain jwks_uri from openid endpoint
BREAKING CHANGE: `allowedIssuers` key removed from JWT_JWKS_ARRAY env variable. `jwksEndpoint` key renamed to `issuerDomain` in JWT_JWKS_ARRAY env variable. `issuerDomain` key treated as OpenID issuer

--- a/.env.template
+++ b/.env.template
@@ -160,14 +160,18 @@ AUTH_BEARER_TOKEN_ARRAY=
 
 ### JWKS JWT VALIDATION ###################################
 
-# Example: [{"jwksEndpoint": "", "allowedAudiences": "ydh", "allowedAlgorithms": ["RS256"], "allowedIssuers": "sider", "maxAge": 90000}]
+# Example: [{"issuerDomain": "", "allowedAudiences": "ydh", "allowedAlgorithms": ["RS256"], "maxAge": 90000}]
 #
 # Object values:
-# jwksEndpoint: String - Required
+# issuerDomain: String - Required, URI of accepted principal that issued JWT, treated as the OpenID Issuer,
+# and the jwks_uri will be retrieved from the domain at "/.well-known/openid-configuration" 
+#
 # allowedAudiences: String or array of strings containing allowed values for the audience claim - Defaults to allow all audiences if unset or empty
+#
 # allowedAlgorithms: Array of strings of allowed algorithms - Defaults to allow all algorithms if unset or empty
-# allowedIssuers: String or array of strings containing allowed values for the issuer claim - Defaults to allow all issuers if unset or empty
+#
 # allowedSubjects: String or array of strings containing allowed values for the subject claim - Defaults to allow all subjects if unset or empty
+#
 # maxAge: Number specifying the maximum allowed age (in milliseconds) for tokens to still be valid - Defaults to no max age if unset or empty
 #
 # Leaving empty will disable JWT auth
