--- a/package.json
+++ b/package.json
@@ -80,9 +80,9 @@
 		"jest": "^28.1.1",
 		"license-checker": "^25.0.1",
 		"mock-jwks": "^1.0.3",
-		"nock": "^13.2.6",
+		"nock": "^13.2.7",
 		"nodemon": "^2.0.16",
-		"prettier": "2.7.0"
+		"prettier": "^2.7.0"
 	},
 	"dependencies": {
 		"@fastify/accepts": "^3.0.0",
