chore(package): add pino-pretty to `start:dev` script

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"lint:prettier:ci": "prettier . -c -u",
 		"prepare": "husky install",
 		"start": "node .",
-		"start:dev": "nodemon",
+		"start:dev": "nodemon | pino-pretty",
 		"test": "npm run lint && npm run jest"
 	},
 	"commitlint": {
