--- a/package.json
+++ b/package.json
@@ -65,11 +65,11 @@
 		"@commitlint/config-conventional": "^17.0.3",
 		"@faker-js/faker": "^7.3.0",
 		"autocannon": "^7.9.0",
-		"eslint": "^8.19.0",
+		"eslint": "^8.20.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "^8.4.0",
 		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jest": "^26.5.3",
+		"eslint-plugin-jest": "^26.6.0",
 		"eslint-plugin-jsdoc": "^39.3.3",
 		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-security": "^1.5.0",
@@ -79,35 +79,35 @@
 		"jest": "^28.1.3",
 		"license-checker": "^25.0.1",
 		"mock-jwks": "^1.0.3",
-		"nock": "^13.2.8",
+		"nock": "^13.2.9",
 		"nodemon": "^2.0.19",
 		"pino-pretty": "^8.1.0",
 		"prettier": "^2.7.1"
 	},
 	"dependencies": {
-		"@fastify/accepts": "^3.0.0",
-		"@fastify/auth": "^2.0.0",
+		"@fastify/accepts": "^4.0.0",
+		"@fastify/auth": "^3.0.2",
 		"@fastify/autoload": "^5.1.0",
-		"@fastify/bearer-auth": "^7.0.2",
-		"@fastify/cors": "^7.0.0",
-		"@fastify/helmet": "^8.1.0",
-		"@fastify/rate-limit": "^6.0.1",
-		"@fastify/reply-from": "^7.0.1",
-		"@fastify/sensible": "^4.1.0",
+		"@fastify/bearer-auth": "^8.0.1",
+		"@fastify/cors": "^8.0.0",
+		"@fastify/helmet": "^9.1.0",
+		"@fastify/rate-limit": "^7.3.0",
+		"@fastify/reply-from": "^8.1.0",
+		"@fastify/sensible": "^5.1.0",
+		"@fastify/under-pressure": "^7.0.0",
 		"ajv-formats": "^2.1.1",
 		"dotenv": "^16.0.1",
 		"env-schema": "^5.0.0",
 		"fast-jwt": "^1.6.1",
-		"fastify": "^3.29.1",
-		"fastify-disablecache": "^2.0.8",
-		"fastify-floc-off": "^1.0.7",
+		"fastify": "^4.3.0",
+		"fastify-disablecache": "^3.0.0",
+		"fastify-floc-off": "^2.0.0",
 		"fastify-plugin": "^4.0.0",
 		"file-stream-rotator": "^0.6.1",
 		"fluent-json-schema": "^3.1.0",
 		"get-jwks": "^7.0.0",
-		"pino": "^8.1.0",
+		"pino": "^8.3.0",
 		"secure-json-parse": "^2.4.0",
-		"under-pressure": "^5.8.0",
 		"upath": "^2.0.1"
 	}
 }
