--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
 		"@fastify/auth": "^4.0.0",
 		"@fastify/autoload": "^5.3.1",
 		"@fastify/bearer-auth": "^8.0.1",
+		"@fastify/compress": "^6.1.1",
 		"@fastify/cors": "^8.1.0",
 		"@fastify/helmet": "^10.0.0",
 		"@fastify/rate-limit": "^7.4.0",
