--- a/.env.template
+++ b/.env.template
@@ -11,8 +11,8 @@ NODE_ENV="development"
 
 # NOTE: Needs to be kept at "0.0.0.0" if using Docker
 # Defaults to resolving to "localhost" if not set
-SERVICE_HOST=
-SERVICE_PORT=8204
+HOST=
+PORT=8204
 # URL and port the Mirth Connect FHIR/HTTP Listener channel is listening on
 SERVICE_REDIRECT_URL=
 
