refactor(config)!: rename `SERVICE_REDIRECT_URL` to `REDIRECT_URL`
BREAKING CHANGE: `SERVICE_REDIRECT_URL` env variable renamed to `REDIRECT_URL`.

--- a/.env.template
+++ b/.env.template
@@ -14,7 +14,7 @@ NODE_ENV="development"
 HOST=
 PORT=8204
 # URL and port the Mirth Connect FHIR/HTTP Listener channel is listening on
-SERVICE_REDIRECT_URL=
+REDIRECT_URL=
 
 ### CORS ##################################################
 
