chore(.env.template): remove service section

--- a/.env.template
+++ b/.env.template
@@ -5,16 +5,11 @@
 # Set to "production" for live system
 NODE_ENV="development"
 
-### SERVICE ###############################################
-
-# All REQUIRED variables
-
 # NOTE: Needs to be kept at "0.0.0.0" if using Docker
 # Defaults to resolving to "localhost" if not set
 HOST=
+# Expects number
 PORT=8204
-# URL and port the Mirth Connect FHIR/HTTP Listener channel is listening on
-REDIRECT_URL=
 
 ### CORS ##################################################
 
@@ -151,6 +146,9 @@ RATE_LIMIT_MAX_CONNECTIONS_PER_MIN=
 ###########################################################
 ### PROJECT SPECIFIC ENV VARIABLES ########################
 ###########################################################
+
+# URL and port the Mirth Connect FHIR/HTTP Listener channel is listening on
+REDIRECT_URL=
 
 ### API KEYS ##############################################
 
