--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
 		"file-stream-rotator": "^0.6.1",
 		"fluent-json-schema": "^3.1.0",
 		"get-jwks": "^8.0.0",
+		"js2xmlparser": "^4.0.2",
 		"pino": "^8.4.2",
 		"secure-json-parse": "^2.5.0",
 		"upath": "^2.0.1"
