refactor(routes)!: rename `/redirect` route to `/forward`
BREAKING CHANGE: `REDIRECT_URL` env variable renamed to `FORWARD_URL`

--- a/.env.template
+++ b/.env.template
@@ -149,7 +149,7 @@ RATE_LIMIT_MAX_CONNECTIONS_PER_MIN=
 ###########################################################
 
 # URL and port the Mirth Connect FHIR/HTTP Listener channel is listening on
-REDIRECT_URL=
+FORWARD_URL=
 
 ### API KEYS ##############################################
 
