--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "ydh-fhir-authentication-service",
 	"version": "12.0.2",
 	"description": "Yeovil District Hospital NHSFT's FHIR API Authentication Service",
-	"main": "src/app.js",
+	"main": "dist/app.js",
 	"repository": "git+https://github.com/Fdawgs/ydh-fhir-authentication-service.git",
 	"homepage": "https://github.com/Fdawgs/ydh-fhir-authentication-service",
 	"bugs": {
@@ -15,6 +15,7 @@
 	},
 	"scripts": {
 		"benchmark": "autocannon -a 1000 -H \"Authorization:Bearer testtoken\" \"http://0.0.0.0:3000/STU3/Flag/126844-10\"",
+		"build": "node .esbuild.js",
 		"jest": "jest",
 		"jest:coverage": "jest --coverage",
 		"lint": "eslint . --cache --ext js,jsx,ts,tsx --ignore-path .gitignore",
@@ -23,7 +24,7 @@
 		"lint:prettier:ci": "prettier . -c -u",
 		"prepare": "husky install",
 		"start": "node .",
-		"start:dev": "nodemon | pino-pretty",
+		"start:dev": "nodemon src/app.js | pino-pretty",
 		"test": "npm run lint && npm run jest"
 	},
 	"commitlint": {
@@ -64,6 +65,8 @@
 		"@commitlint/cli": "^17.4.0",
 		"@commitlint/config-conventional": "^17.4.0",
 		"autocannon": "^7.10.0",
+		"esbuild": "^0.16.16",
+		"esbuild-plugin-glob": "^2.2.1",
 		"eslint": "^8.31.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "^8.6.0",
