--- a/package.json
+++ b/package.json
@@ -105,11 +105,11 @@
 		"fastify": "^4.12.0",
 		"fastify-disablecache": "^3.0.5",
 		"fastify-floc-off": "^2.0.5",
+		"fastify-json-to-xml": "^1.0.0",
 		"fastify-plugin": "^4.5.0",
 		"file-stream-rotator": "^1.0.0",
 		"fluent-json-schema": "^4.0.0",
 		"get-jwks": "^8.0.3",
-		"js2xmlparser": "^5.0.0",
 		"pino": "^8.8.0",
 		"secure-json-parse": "^2.7.0",
 		"upath": "^2.0.1"
