feat(docs): add `/docs` route for openapi redoc ui

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,6 +117,9 @@ jobs:
             - name: Install
               run: npm ci --ignore-scripts
 
+            - name: Install Playwright
+              run: npx playwright install --with-deps chromium firefox
+
             - name: Run tests
               run: |
                   cp .env.template .env
