--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"jest": "jest",
 		"jest:coverage": "jest --coverage",
 		"lint": "eslint . --cache --ext js,jsx,ts,tsx --ignore-path .gitignore",
-		"lint:licenses": "license-checker --direct --onlyAllow=\"0BSD;Apache-2.0;BSD-2-Clause;BSD-3-Clause;ISC;MIT;Unlicense\" --production --summary",
+		"lint:licenses": "license-checker --direct --excludePackages=\"caniuse-lite@1.0.30001457;url-template@2.0.8\" --onlyAllow=\"0BSD;Apache-2.0;BSD-2-Clause;BSD-3-Clause;ISC;MIT;Python-2.0;Unlicense\" --production --summary",
 		"lint:prettier": "prettier . -w -u",
 		"lint:prettier:ci": "prettier . -c -u",
 		"prepare": "husky install",
@@ -45,7 +45,7 @@
 		],
 		"resetMocks": true,
 		"testEnvironment": "node",
-		"testTimeout": 10000
+		"testTimeout": 60000
 	},
 	"nodemonConfig": {
 		"env": {
@@ -78,12 +78,14 @@
 		"eslint-plugin-security-node": "^1.1.1",
 		"glob": "^8.1.0",
 		"husky": "^8.0.3",
+		"is-html": "^2.0.0",
 		"jest": "^29.4.3",
 		"license-checker": "^25.0.1",
 		"mock-jwks": "^1.0.9",
 		"nock": "^13.3.0",
 		"nodemon": "^2.0.20",
 		"pino-pretty": "^9.3.0",
+		"playwright": "^1.31.1",
 		"prettier": "^2.8.4"
 	},
 	"dependencies": {
@@ -97,6 +99,8 @@
 		"@fastify/rate-limit": "^7.6.0",
 		"@fastify/reply-from": "^8.4.3",
 		"@fastify/sensible": "^5.2.0",
+		"@fastify/static": "^6.9.0",
+		"@fastify/swagger": "^8.3.1",
 		"@fastify/under-pressure": "^8.2.0",
 		"ajv-formats": "^2.1.1",
 		"dotenv": "^16.0.3",
@@ -111,6 +115,7 @@
 		"fluent-json-schema": "^4.1.0",
 		"get-jwks": "^8.0.3",
 		"pino": "^8.10.0",
+		"redoc": "^2.0.0",
 		"secure-json-parse": "^2.7.0",
 		"upath": "^2.0.1"
 	}
